syntax = "proto3";

option csharp_namespace = "TrafficCourts.Ticket.Search.Service";

package ticket;

// The ticket search service definition.
service TicketSearch {
  // searches for a ticket
  rpc Search (SearchRequest) returns (SearchReply);
}

// The request message containing the user's name.
message SearchRequest {
  string number = 1;
  string time = 2;
}

// The response message containing the greetings.
message SearchReply {
  string message = 1;
}
